<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/menu_sort_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_playlists"
        android:icon="@drawable/ic_playlist"
        android:title="@string/menu_playlists"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>
