<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient">

    <ImageView
        android:id="@+id/splashLogo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/bg_circle_ripple"
        android:clickable="false"
        android:padding="24dp"
        android:src="@drawable/ic_music_note"
        android:contentDescription="@string/cd_app_logo"
        app:layout_constraintBottom_toTopOf="@id/splashAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/splashAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/splashTagline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splashLogo" />

    <TextView
        android:id="@+id/splashTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        android:alpha="0.75"
        android:text="@string/splash_tagline"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splashAppName" />

    <ProgressBar
        android:id="@+id/splashProgress"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginBottom="48dp"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
